# ReflexMinimap

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
include/: error.h  log.h  messageformat.h  network.h  pixantiqua.ttf.h  socket.h  types.h  window.h
res/: ReflexMinimap-mgba.lua  katam-minimap-client.lua  katam-minimap-mgba.lua
res/pixantiqua/: LICENSE
scripts/: katam-minimap-client.lua
src/: main.c  messageformat.c  network.c  pixantiqua.ttf.c  socket.c  window.c
